Empty entity group criteria should match any occurrences
The current behavior of empty entity group criteria is to returna null
filter, which effetively ignores the criteria. Instead, empty entity
group criteria should check for the existence of any matching
occurrence (e.g. any conditionOccurence for a person in a condition
criteria).